# filetomd

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/fileconverter/: __init__.py  __main__.py  cli.py  converter.py
src/fileconverter/converters/: __init__.py  base.py  csv.py  docx.py  html.py  image.py  msg.py  ocr_preprocessor.py  pdf.py  pptx.py  table_postprocessor.py  url.py  video.py  xlsx.py
src/fileconverter/utils/: __init__.py  file_utils.py  quality_scorer.py  url_utils.py
tests/: __init__.py  test_image_converter.py  test_merge.py  test_ocr_preprocessor.py  test_quality_scorer.py  test_table_postprocessor.py  test_url_converter.py  test_video_converter.py
